tests/NormalTests/paczka1/small_fuzzy/75741130.err
Error in line 2: c62i2b A297 61,3
Error in line 6: c62i2b S396 -1,8
